[package]
name = "dll-pack"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8.5"
wasmtime = { version = "24.0.0", default-features = false, features = ["runtime", "gc", "threads", "cranelift"] }
wasmtime-wasi = "24.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.120"
url_serde = "0.2.0"
url = "1.7.2"
urlencoding = "2.1.3"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "http2", "blocking", "stream"] }
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["fs"] }
futures = "0.3.31"
log = "0.4.22"
