[package]
name = "dll-pack"
version = "0.2.1"
edition = "2021"

[dependencies]
libloading = "0.8.5"
wasmtime = { version = "29.0.1", default-features = false, features = ["runtime", "gc", "gc-drc", "threads", "cranelift"] }
wasmtime-wasi = "29.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.120"
url_serde = "0.2.0"
url = "1.7.2"
urlencoding = "2.1.3"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "http2", "blocking", "stream"] }
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["fs"] }
log = "0.4.22"
